fix width on mobile devices

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -92,7 +92,7 @@ pre {
 .site-header {
     background-color: #ffffff;
     color: #2b2b2b;
-    width: 1100px;
+    /*width: 1100px;*/
 }
 
 .site-header h1 {
